--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -20,14 +20,14 @@ DID의 일반적인 형식은 이 문서에 정의되어 있다.
 특정한 <a>DID 체계</a>는 <a>DID 메소드</a> 규격에 정의되어 있다.
   </dd>
 
-  <dt><dfn data-lt="decentralized identity management">분산 신원 관리</dfn> (decentralized identity management)</dt>
+  <dt><dfn data-lt="decentralized identity management|탈중앙 ID 관리">탈중앙 신원 관리</dfn> (decentralized identity management)</dt>
   <dd>
-분산 식별자를 관리하는 <a href="https://en.wikipedia.org/wiki/Identity_management">신원 관리</a> 방법이다. 
-분산 ID 관리는 기존에 전통적인 신뢰의 주체였던 <a href="https://en.wikipedia.org/wiki/X.500">X.500 direcotry services</a>, <a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>, 
-그리고 대부분의 국가 ID 시스템에서 생성 권한의 연장선상에 있다.
+탈중앙 식별자를 관리하는 <a href="https://en.wikipedia.org/wiki/Identity_management">신원 관리</a> 방법이다. 
+탈중앙 ID 관리는 기존에 전통적인 신뢰의 주체였던 <a href="https://en.wikipedia.org/wiki/X.500">X.500 direcotry services</a>, <a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>, 
+그리고 대부분의 국가 ID 시스템보다 생성 권한 확장한다.
   </dd>
 
-  <dt><dfn>분산형 공개키 인프라</dfn> (Decentralized Public Key Infrastructure, DPKI)</dt>
+  <dt><dfn>탈중앙 공개키 인프라</dfn> (Decentralized Public Key Infrastructure, DPKI)</dt>
 
   <dd>
 <a>탈중앙 식별자</a>와 신원 기록 (예를들어 <a>DID 문서</a>) 등 검증 가능한 <a>공개키 정보</a>들을 포함한 공개키 기반 인프라를 말한다.
