fixing broken links

--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -12,7 +12,7 @@
 이러한 타입의 <a>분산원장</a>이 <a href="https://en.wikipedia.org/wiki/Bitcoin">비트코인</a>에 의해 처음 소개되었기 때문에 <em>블록체인</em> 이라는 단어는 가끔 구체적으로 비트코인 원장을 의미하기도 한다.
   </dd>
 
-  <dt><dfn data-lt="decentralized identifiers|DID|DIDs|탈중앙 ID">탈중앙 식별자</dfn> (decentralized identifier, DID)</dt>
+  <dt><dfn data-lt="decentralized identifiers|DID|DIDs|탈중앙 ID|탈중앙 식별자들">탈중앙 식별자</dfn> (decentralized identifier, DID)</dt>
 
   <dd>
 <a>분산원장기술</a>(DLT)이나 다른 형태의 분산 네트워크에 등록되었기 때문에 중앙화된 등록기관이 필요하지 않은 전역적으로 고유한 식별자이다. 
@@ -58,7 +58,7 @@ takes control of the private keys.
 <a>DID</a> 또는 <a>DID 문서</a>를 제어하는 주체 또는 그룹이다. 참고로 <a>DID 컨트롤러</a>는 <a>DID 대상</a>을 포함할 수 있다.
   </dd>
 
-  <dt><dfn data-lt="DID document|DID documents">DID 문서</dfn> (DID document)</dt>
+  <dt><dfn data-lt="DID document|DID documents|DID 문서들">DID 문서</dfn> (DID document)</dt>
 
   <dd>
 <a>DID 대상</a>을 설명하는 데이터들의 모음이다. 
@@ -73,7 +73,7 @@ DID 문서는 DID 대상에 대한 다른 <a href="https://en.wikipedia.org/wiki
 <a>DID URL</a>중 첫 번째 해시 기호 문자 (<code>#</code>) 다음에 오는 부분이다. DID 조각 구문은 URI 조각 구문과 동일하다.
   </dd>
 
-  <dt><dfn data-lt="DID method|DID methods">DID 메소드</dfn> (DID method)</dt>
+  <dt><dfn data-lt="DID method|DID methods|DID 메소드들">DID 메소드</dfn> (DID method)</dt>
 
   <dd>
 특정 <a>DID 체계</a>가 특정 <a>분산원장</a>이나 네트워크에서 구현할 수 있는지 정확한 방법을 정의한 것이다. 
@@ -106,7 +106,7 @@ DID 레지스트리는 검증 가능한 데이터 레지스트리 유형이다. 
   </dd>
   </dt>
 
-  <dt><dfn data-lt="DID schemes|DID scheme">DID 체계</dfn> (DID scheme)</dt>
+  <dt><dfn data-lt="DID schemes|DID scheme|DID 스키마">DID 체계</dfn> (DID scheme)</dt>
 
   <dd>
 <a>탈중앙 식별자</a>의 공식적인 구문. 전반적인 DID 체계는 이 문서에 포함되어 있다.
