added decentralized public key infrastructure

--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -27,7 +27,7 @@ DID의 일반적인 형식은 이 문서에 정의되어 있다.
 그리고 대부분의 국가 ID 시스템보다 생성 권한 확장한다.
   </dd>
 
-  <dt><dfn>탈중앙 공개키 인프라</dfn> (Decentralized Public Key Infrastructure, DPKI)</dt>
+  <dt><dfn data-lt="decentralized public key infrastructure">탈중앙 공개키 인프라</dfn> (Decentralized Public Key Infrastructure, DPKI)</dt>
 
   <dd>
 <a>탈중앙 식별자</a>와 신원 기록 (예를들어 <a>DID 문서</a>) 등 검증 가능한 <a>공개키 정보</a>들을 포함한 공개키 기반 인프라를 말한다.
