fixed borken links

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -252,7 +252,7 @@ Design</a>] 가이드라인에 따라, 개체들은 신원, 페르소나, 그리
     </p>
       <ul>
         <li>
-다른 <a>URI 체계</a>의 <a>URIs</a>가 상호운용되지 않는 것처럼, 다른 <a>DID 메소드</a>의 <a>DIDs</a>는 상호운용되지 않을 수 있다.
+다른 URI 체계의 <a>URIs</a>가 상호운용되지 않는 것처럼, 다른 <a>DID 메소드</a>의 <a>DIDs</a>는 상호운용되지 않을 수 있다.
         </li>
         <li>
 일부 브라우저가 특정 URI 체계만 지원하는 경우와 같이, 특정한 <a>DID 메소드</a>만을 지원하는 관계의 지원을 받기 위해 복수의 <a>DIDs</a>가 필요할 수 있다.
