--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -151,7 +151,7 @@ since a <a>DID subject</a> is not always an individual person.
 JSON 포인터는 [[RFC6901]]에 정의된 JavaScript Object Notation (JSON) 문서에서 특정 값을 식별하기위한 문자열 구문을 정의한다.
   </dd>
 
-  <dt><dfn data-lt="public key description">공개키 설명</dfn> (public key description)</dt>
+  <dt><dfn data-lt="public key description|공개키 정보">공개키 설명</dfn> (public key description)</dt>
 
   <dd>
 <a>DID 문서</a> 안에 공개키나 인증키를 사용하기 위한 모든 메타데이터를 담은 JSON 객체이다.
