--- a/did-core/index.html
+++ b/did-core/index.html
@@ -40,8 +40,8 @@
 
     // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
     // and its maturity status
-    // previousPublishDate:  "1977-03-15",
-    // previousMaturity:  "WD",
+    previousPublishDate:  "2019-12-09",
+    previousMaturity:  "WD",
 
     // extend the bibliography entries
     localBiblio: ccg.localBiblio,
@@ -1038,7 +1038,7 @@ mutually agreed terminology.
         <p class="note" title="The JSON-LD Context">
 More information about the
 <a href="https://www.w3.org/TR/json-ld/#the-context">JSON-LD Context</a>
-in general can be found in the [[!JSON-LD]] specification.
+in general can be found in the [[JSON-LD]] specification.
         </p>
 
         <dl>
