--- a/did-core/index.html
+++ b/did-core/index.html
@@ -252,7 +252,7 @@ Design</a>] 가이드라인에 따라, 개체들은 신원, 페르소나, 그리
     </p>
       <ul>
         <li>
-다른 <a>URI 체계</a>의 <a>URIs</a>가 상호운용되지 않는 것처럼, 다른 <a>DID 메소드</a>의 <a>DIDs</a>는 상호운용되지 않을 수 있다.
+다른 URI 체계의 <a>URIs</a>가 상호운용되지 않는 것처럼, 다른 <a>DID 메소드</a>의 <a>DIDs</a>는 상호운용되지 않을 수 있다.
         </li>
         <li>
 일부 브라우저가 특정 URI 체계만 지원하는 경우와 같이, 특정한 <a>DID 메소드</a>만을 지원하는 관계의 지원을 받기 위해 복수의 <a>DIDs</a>가 필요할 수 있다.
@@ -2150,7 +2150,7 @@ Unique DID Method Names
 새로운 <a>DID 메소드</a> 규격의 저자는 발표 당시 알려진 모든 <a>DID 메소드</a> 이름들과 중복되지 않는 고유한 메소드 이름을 사용해야만 한다.
       </p>
       <p>
-<a>DID 메소드</a> 이름을 할당하거나 승인 할 수 있는 권한을 가진 중앙기관이 없기 때문에 특정 <a>DID 메서드</a> 이름이 고유한 지 확인할 방법이 없다. 이 문제를 해결하기 위해 <a href="https://www.w3.org/community/credentials/">W3C Credentials Community Group</a>은 알려진 <a>DID 메소드</a> 이름과 관련 규격의 비권한 목록을 유지한다(Appendix <a href="#registries"></a> 참조)
+<a>DID 메소드</a> 이름을 할당하거나 승인 할 수 있는 권한을 가진 중앙기관이 없기 때문에 특정 <a>DID 메소드</a> 이름이 고유한 지 확인할 방법이 없다. 이 문제를 해결하기 위해 <a href="https://www.w3.org/community/credentials/">W3C Credentials Community Group</a>은 알려진 <a>DID 메소드</a> 이름과 관련 규격의 비권한 목록을 유지한다(Appendix <a href="#registries"></a> 참조)
       </p>
       <p>
 [[DID-METHOD-REGISTRY]]는 새로운 메소드 명칭을 합의할 때 구현자가 참조 할 수 있는 도구이며, 또한 다른 <a>DID 메소드</a>의 <a>DID 리졸버</a>를 구현하는 소프트웨어 개발자가 참조 할 수 있는 정보가 된다. 좀 더 많은 <a>DID 리졸버</a>에 대한 정보는 <a href="#did-resolvers"></a>을 참고 할 것.
