--- a/did-core/index.html
+++ b/did-core/index.html
@@ -476,14 +476,12 @@ Data Model
     </h1>
 
     <p>
-This section outlines the <a>decentralized identifier</a> data model concepts,
-specifically, how keys, services, and the <a>DID subject</a> are related to the
-<a>DID document</a>.
-    </p>
+이 섹션에서는 <a>decentralized identifier</a> 데이터 모델 개념,
+특히, 키와 서비스 그리고 <a>DID 주체</a>가 <a>DID 문서</a>와 어떻게 관련되어 있는지에 대해 개략적으로 설명한다.</p>
 
     <p>
-For more information about how the data model can be extended, see Section
-<a href="#extensibility"></a>.
+      데이터 모델을 확장하는 방법에 대한 자세한 내용은 
+<a href="#extensibility"></a>을 참조한다.
     </p>
 
   <section>
@@ -492,11 +490,10 @@ Identifier
     </h2>
 
     <p>
-Identifiers are used in the data model to identify specific instances of people,
-organizations, devices, keys, services, and things in general. Identifiers are
-typically URLs, or more generally, <a>URIs</a>. Non-<a>URI</a>-based identifiers
-are not advised because, while the data model supports them, they are not easy
-to use with other Internet-based identifiers.
+      데이터 모델에서 식별자는 일반적으로 사람, 조직, 장치, 키, 서비스 및 사물의 특정 인스턴스를 식별하기 위해 사용된다. 
+      식별자는 전형적인 URLs이며, 좀 더 일반적으로는 <a>URIs</a> 이다. 
+      비 <a>URI</a> 기반 식별자는 데이터 모델이 이를 지원하기는 하지만, 
+      다른 인터넷 기반 식별자와 함께 사용하기 쉽지 않기 때문에 권장되지 않는다.
     </p>
   </section>
 
@@ -506,26 +503,21 @@ DID Document
     </h2>
 
    <p>
-A <a>DID document</a> is the resource that is associated with a
-<a>decentralized identifier</a> (DID). <a>DID documents</a> typically express
-verification methods (such as public keys) and services that can be used to
-interact with a <a>DID controller</a>.
+    <a>DID 문서</a>는 <a>decentralized identifier</a>(DID)와 관련된 리소스다. 
+    <a>DID 문서</a>는 일반적으로 검증 메소드(public key 등) 및 <a>DID 컨트롤러</a>와 상호 작용 하는데 사용할 수 있는 서비스를 포함한다.
     </p>
 
     <p>
-A <a>DID document</a> is serialized according to a particular syntax, as
-outlined in Section <a href="#did-document-syntax"></a>). The <a>DID</a> itself
-is contained in the <code>id</code> property.
+    <a>DID 문서</a>는 특정 구문에 따라 일련화된다(<a href="#did-document-syntax"></a> 참조). <a>DID</a> 자체는 <code>id</code> 속성에 포함되어 있다. 
+
     </p>
 
     <p>
-The properties that can be present in a <a>DID document</a> are outlined in
-Section <a href="#did-documents"></a>.
+      <a>DID 문서</a>에 존재할 수 있는 속성은 <a href="#did-documents"></a>에 자세히 설명되어 있다.
     </p>
 
     <p>
-The properties present in a <a>DID document</a> can be updated according to
-the applicable operations outlined in Section <a href="#did-methods"></a>.
+      <a>DID 문서</a>에 있는 속성은 해당 <a href="#did-methods"></a> 에 따라 업데이트 할 수 있다.
     </p>
   </section>
 
@@ -535,36 +527,28 @@ Cryptographic Keys and Other Verification Methods
     </h2>
 
     <p>
-A <a>DID document</a> can express cryptographic keys and other verification
-methods, which can be used to authenticate or authorize interactions with the
-<a>DID subject</a> or associated parties. The information expressed often
-includes globally unambiguous identifiers and public key material, which can be
-used to verify digital signatures. Other information can be expressed, such as
-status information for the key (for example, whether it is suspended or
-revoked), or other attributes that enable one to determine whether it is a
-hardware-backed cryptographic key.
+      <a>DID 문서</a>는 <a>DID 주체</a> 또는 관련된 것들과의 상호작용을 인증 하거나 승인하는 데 사용할 수 있는 
+      암호화 키 및 기타 검증 메소드를 나타낼 수 있다. 
+      표현된 정보에는 디지털 서명을 확인하는 데 전역적으로 사용할 수 있는 
+      명확한 식별자와 공개키 자료가 포함된다. 
+      키의 상태 정보(예: 정지 또는 취소된 경우)나 하드웨어 기반 암호화 키인지 여부를 결정할 수 있는 속성 등 
+      기타 정보를 표시할 수 있다.
     </p>
 
-    <p>
-Regarding cryptographic key material, public keys can be included in a
-<a>DID document</a> using, for example, the <code>publicKey</code> or
-<code>authentication</code> properties, depending on what they are to be used
-for. Each public key has an identifier (<code>id</code>) of its own, a
-<code>type</code>, and a <code>controller</code>, as well as other properties
-that depend on the type of key it is. For more information, see Section
-<a href="#public-keys"></a>.
+    <p> 
+      암호화 키 자료와 관련하여, 공개키는 사용할 대상에 따라 
+      <code>publicKey</code> 또는 <code>authentication</code> 속성을 사용하는 <a>DID 문서</a>에 포함될 수 있다. 
+
+      각 공개키는 고유한 식별자(<code>id</code>), <code>type</code>, 그리고 <code>controller</code> 뿐만아니라 
+      키 유형에 따라 다른 속성을 갖는다. 자세한 내용은 <a href="#public-keys"></a>를 참조한다.
     </p>
   </section>
 
       <p>
-This specification strives to limit the number of formats for expressing public
-key material in a DID Document to the fewest possible, to increase the
-likelihood of interoperability. The fewer formats that implementers have to
-implement, the more likely it will be that they will support all of them. This
-approach attempts to strike a delicate balance between ease of implementation
-and supporting formats that have historically had broad deployment. The specific
-types of key formats that are supported in this specification are listed in <a
-href="#public-keys"></a>.
+        이 규격은 DID 문서에서 공개키 자료를 표현하기 위한 형식의 수를 가능한 적게 제한하여 상호 운용성을 높이려고 노력한다. 
+        구현자가 구현해야하는 형식이 적을수록 모든 형식을 지원할 가능성이 높다. 
+        이 접근 방식은 구현의 용이성과 역사적으로 광범위하게 배포된 지원 형식간에 미묘한 균형을 유지한다. 
+        이 규격에서 지원되는 특정 유형의 키 형식은 <a href="#public-keys"></a>에 나와 있다.
       </p>
     </section>
 
@@ -574,25 +558,21 @@ Services
     </h2>
 
     <p>
-<a>Service endpoints</a> are used in <a>DID documents</a> to express ways of
-communicating with the <a>DID subject</a> or associated entities. Services
-listed in the <a>DID document</a> can contain information about privacy
-preserving messaging services, or more public information, such as social media
-accounts, personal websites, and email addresses. The metadata associated with
-services are often service-specific. For example, the metadata associated with
-an encrypted messaging service can express how to initiate the encrypted link
-before messaging begins.
+      <a>서비스 엔드포인트</a>는 <a>DID 주체</a> 또는 관련 개체와 통신할 수 있는 방법을 나타내기 위해 <a>DID 문서</a>에서 사용된다. 
+      <a>DID 문서</a>에 나열된 서비스에는 개인 정보 보호 메시징 서비스에 대한 정보 
+      또는 소셜 미디어 계정, 개인 웹사이트, 이메일 주소와 같은 공개 정보가 포함될 수 있다. 
+      서비스와 관련된 메타 데이터는 보통 서비스마다 다르다. 예를 들어, 암호화된 메시징 서비스와 관련된 메타 데이터는 
+      메시지는 보내기 전에 암호화된 링크를 시작하는 방법을 나타낼 수 있다. 
     </p>
 
     <p>
-Pointers to services are expressed using the <code>service</code> property.
-Each service has its own <code>id</code> and <code>type</code>, as well as a
-<code>serviceEndpoint</code> with a <a>URI</a> or other properties describing
-the service.
+      서비스에 대한 포인터는 <code>service</code> 속성을 사용하여 표현한다. 
+      각 서비스에는 고유한 <code>id</code> 와 <code>type</code> 뿐만 아니라, <a>URI</a> 또는 
+      서비스를 설명하는 추가적 특성이 있는 <code>serviceEndpoint</code> 가 있다. 
     </p>
 
     <p>
-For more information, see Section <a href="#service-endpoints"></a>.
+      자세한 내용은 <a href="#service-endpoints"></a>를 참조한다.
     </p>
   </section>
 
@@ -985,41 +965,36 @@ DID Documents
     </h1>
 
     <p>
-A <a>DID</a> points to a <a>DID document</a>. <a>DID documents</a> are the
-serialization of the <a href="#data-model"></a>.
-The following sections define the properties in a <a>DID document</a>,
-including whether these properties are required or optional.
+      <a>DID</a>는 <a>DID 문서</a>를 가리킨다. 
+      <a>DID 문서</a>들은 <a href="#data-model"></a>을 직렬화 한 것이다. 
+      이번 섹션에서는 <a>DID 문서</a>의 속성과 이 속성들이 필수인지 옵션인지를 정의한다.
     </p>
 
     <section>
       <h2>Contexts</h2>
 
         <p>
-When two software systems need to exchange data, they need to use terminology
-and a protocol that both systems understand. The <code>@context</code>
-property ensures that two systems operating on the same DID document are using
-mutually agreed terminology.
+          두 개의 소프트웨어 시스템이 데이터를 교환해야 하는 경우 
+          두 시스템이 이해할 수 있는 용어와 프로토콜을 사용해야 한다. 
+          <code>@context</code> 속성은 동일한 DID 문서에서 작동하는 두 시스템이 서로 동의하는 용어를 사용하도록 한다.
         </p>
 
         <p>
-<a>DID documents</a> MUST include the <code>@context</code> property.
+          <a>DID 문서</a> 는 반드시 <code>@context</code> 속성을 포함해야 한다.
         </p>
 
         <p class="note" title="The JSON-LD Context">
-More information about the
-<a href="https://www.w3.org/TR/json-ld/#the-context">JSON-LD Context</a>
-in general can be found in the [[!JSON-LD]] specification.
+          <a href="https://www.w3.org/TR/json-ld/#the-context">JSON-LD Context</a>에 대한 
+          자세한 정보는 [[!JSON-LD]] 사양에서 확인할 수 있다.
         </p>
 
         <dl>
           <dt><dfn>@context</dfn></dt>
           <dd>
-The value of the <code>@context</code> property MUST be one or more
-<a>URIs</a>, where the value of the first <a>URI</a> is
-<code>https://www.w3.org/ns/did/v1</code>. If more than one
-<a>URI</a> is provided, the <a>URIs</a> MUST be interpreted as an ordered set.
-It is RECOMMENDED that dereferencing the <a>URIs</a> results in a document
-containing machine-readable information about the context.
+            <code>@context</code> 속성의 값은 반드시 하나 이상의 <a>URIs</a> 여야 하며, 
+            여기서 첫 번째 <a>URI</a>의 값은 <code>https://www.w3.org/ns/did/v1</code> 이다. 
+            둘 이상의 <a>URI</a>가 제공될 경우, <a>URIs</a>는 반드시  순서있는 배열로 해석되어야 한다. 
+            <a>URIs</a>를 역 참조하여 컨텍스트에 대한 기계 판독 가능한 정보가 포함된 문서를 생성 하는 것이 좋다. 
           </dd>
         </dl>
 
@@ -1033,10 +1008,9 @@ Example:
 }
 </pre>
       <p>
-<a>DID method</a> specifications MAY define their own JSON-LD contexts.
-However it is NOT RECOMMENDED to define a new context unless
-necessary to properly implement the method. Method-specific contexts
-MUST NOT override the terms defined in the generic <a>DID</a> context.
+        <a>DID 문서</a> 규격은 자체 JSON-LD 컨텍스트를 정의 할 수 있다. 
+        하지만 메소드를 올바르게 구현하는 데 필요한 경우가 아니면 새 컨텍스트를 정의하는 것은 권장하지 않는다. 
+        메소드별 컨텍스트는 일반 <a>DID</a> 컨텍스트에 정의된 용어를 재정의하면 안된다.
       </p>
     </section>
 
@@ -2563,19 +2537,13 @@ Privacy Considerations
     </h1>
 
     <p>
-It is critically important to apply the principles of Privacy by Design
-to all aspects of decentralized identifier architecture, because DIDs
-and DID Documents are &mdash; by design &mdash; administered directly by
-the <a>DID controller(s)</a>.
-There is no registrar, hosting company, or other intermediate service
-provider to recommend or apply additional privacy safeguards. The
-authors of this specification have applied all seven Privacy by Design
-principles throughout its development. For example, privacy in this
-specification is preventative not remedial, and privacy is an embedded
-default. Furthermore, <a>decentralized identifier</a> architecture by itself
-embodies principle #7, "Respect for user privacy &mdash; keep it user-centric."
-This section lists additional privacy considerations that implementers,
-delegates, and <a>DID subjects</a> should bear in mind.
+      DIDs 및 DID 문서는 설계 상 <a> DID 컨트롤러</a>에 의해 직접 관리되므로, 
+      프라이버시 디자인 (Privacy by Design) 원칙을 분산 식별자 아키텍처의 모든 측면에 적용하는 것이 매우 중요하다.
+      추가적으로 프라이버시 보호를 권장하거나 적용할 등록 기관, 호스팅 회사 또는 기타 중간 서비스 제공 업체는 없다.
+      이 규격의 저자는 개발 전반에 걸쳐 7가지 프라이버시 디자인(Privacy by Design) 원칙을 모두 적용했다.
+      예를 들어, 이 규격에서 프라이버시는 예방적이지 교정적이지 않다. 프라이버시는 기본 설정이다. 
+      또한 <a>decentralized identifier</a> 아키텍처 자체는 원칙 # 7, "Respect for user privacy — keep it user-centric."를 구현한다. 
+      이 섹션에는 구현자(implementers), 대리인(delegates) 및 <a>DID 주체</a>가 염두에 두어야 할 추가 프라이버시 고려 사항이 나열되어 있다.
     </p>
 
     <section>
@@ -2585,18 +2553,15 @@ Requirements of DID Method Specifications
 
       <ol start="1">
         <li>
-<a>DID method</a> specifications MUST include their own Privacy
-Considerations sections, if only to point to the general privacy
-considerations in this section.
+          이 섹션의 일반적인 프라이버시 고려사항만 가리키는 경우, 
+          <a>DID 메소드</a> 규격에는 반드시 자체 프라이버시 고려사항 섹션이 포함되어야한다.
         </li>
 
         <li>
-The <a>DID method</a> specification's Privacy Considerations section
-MUST discuss any subsection of
-section 5 of [[RFC6973]] that could apply in a method-specific
-manner. The subsections to consider are: surveillance, stored data
-compromise, unsolicited traffic, misattribution, correlation,
-identification, secondary use, disclosure, exclusion.
+          <a>DID 메소드</a> 규격의 프라이버시 고려사항 섹션은 
+          메소드에 따라 적용 할 수있는 [RFC6973]의 5 항의 하위 섹션을 반드시 논의해야한다. 
+          고려해야 할 하위 섹션은 ‘감시, 저장된 데이터 손상, 원치 않는 트래픽, 
+          잘못된 속성, 상관 관계, 식별, 2차 사용, 공개, 예외’가 있다.
         </li>
       </ol>
     </section>
@@ -2607,18 +2572,24 @@ Keep Personally-Identifiable Information (PII) Private
       </h2>
 
       <p>
-If a <a>DID method</a> specification is written for a public <a>DID
-registry</a> where all <a>DIDs</a> and <a>DID documents</a> will be publicly available,
-it is <em>critical</em> that <a>DID documents</a> contain no PII. All PII
-should be kept behind <a>service endpoints</a> under the control
-of the <a>DID subject</a>. With this privacy architecture, PII may be exchanged
+<a>DID 메소드</a> 규격이 모든 <a>DIDs</a> 및 <a>DID 문서</a>를 공개적으로 사용할 수 있는 
+공개<a>DID 레지스트리</a>에 대해 작성된 경우, 
+<a>DID 문서</a>에 PII가 포함되지 않도록 하는 것은  매우 <em>중요하다</em>. 
+
+모든 PII는 <a>DID 주체</a>의 통제  하에 <a>서비스 엔드포인트</a> 뒤에서 유지되어야 한다. 
+
+With this privacy architecture, PII may be exchanged
 on a private, peer-to-peer basis using communications channels identified and
-secured by <a>public key descriptions</a> in <a>DID documents</a>. This also
-enables <a>DID subjects</a> and relying parties to implement the
-<a href="https://en.wikipedia.org/wiki/General_Data_Protection_Regulation">GDPR</a>
+secured by <a>public key descriptions</a> in <a>DID documents</a>. 
+
+이 프라이버시 설계를 통해, 
+PII는 <a>DID 문서</a>의 <a>공개키 설명</a>으로 식별되고 보안되는 통신 채널을 사용하여, 
+피어 투 피어 기반으로 교환 될 수 있다. 
+
+또한 이것은 불변의 분산 장부에 PII가 기록되지 않기 때문에, 
+<a>DID 주체</a>와 신뢰 당사자가 <a href="https://en.wikipedia.org/wiki/General_Data_Protection_Regulation">GDPR</a> 
 <a href="https://en.wikipedia.org/wiki/Right_to_be_forgotten">right
-to be forgotten</a>, as no PII will be written to an immutable
-<a>distributed ledger</a>.
+  to be forgotten</a>를 구현할 수 있다.
       </p>
     </section>
 
@@ -2628,15 +2599,13 @@ DID Correlation Risks and Pseudonymous DIDs
       </h2>
 
       <p>
-Like any type of globally unique identifier, <a>DIDs</a> may be used for
-correlation. <a>DID controllers</a> can mitigate this privacy risk by using
-pairwise unique <a>DIDs</a>, i.e., by sharing a different private <a>DID</a> for
-every relationship. In effect, each <a>DID</a> acts as a pseudonym. A
-pseudonymous <a>DID</a> need only be shared with more than one party when
-the <a>DID subject</a> explicitly authorizes correlation between those parties.
-If pseudonymous <a>DIDs</a> are the default, then the only need for a public
-<a>DID</a> &mdash; a <a>DID</a> published openly or shared with a large number of
-parties &mdash; is when the <a>DID subject</a> explicitly desires public identification.
+        모든 유형의 전역적 고유 식별자와 마찬가지로, <a>DIDs</a> 상관 관계에 사용할 수 있다.
+        <a>DID 컨트롤러</a>는 쌍으로 된 고유한 <a>DIDs</a> 사용하거나, 
+        모든 관계에 대해 다른 개인용 <a>DID</a>를 공유함으로써 프라이버시 위험을 완화할 수 있다. 
+        실제로 각 <a>DID</a>는 익명으로 사용된다.
+        익명 <a>DID</a>는 <a>DID 주체</a>가 당사자 간의 상관 관계를 명시적으로 승인한 경우 둘 이상의 당사자끼리만 공유하면 된다. 
+        익명 <a>DIDs</a>가 기본 값일 때, 공개 <a>DIDs</a> (공개적으로 발행되었거나 다수의 당사자와 공유된 <a>DIDs</a>)가 
+        필요한 경우는 <a>DID 주체</a>가 명시적으로 공개 식별을 원할 때 뿐이다.
       </p>
     </section>
 
@@ -2646,21 +2615,15 @@ DID Document Correlation Risks
       </h2>
 
       <p>
-The anti-correlation protections of pseudonymous <a>DIDs</a> are easily
-defeated if the data in the corresponding <a>DID documents</a> can be
-correlated. For example, using same <a>public key descriptions</a> or
-bespoke <a>service endpoints</a> in multiple <a>DID documents</a> can provide
-as much correlation information as using the same <a>DID</a>. Therefore the <a>DID
-document</a> for a pseudonymous <a>DID</a> also needs to use pairwise-unique
-public keys.
-
-It might seem natural to also use pairwise-unique <a>service endpoints</a>
-in the <a>DID document</a> for a pseudonymous <a>DID</a>. However, unique
-endpoints allow all traffic between to <a>DIDs</a> to be isolated perfectly into
-unique buckets, where timing correlation and similar analysis is easy.
-Therefore, a better strategy for endpoint privacy may be to share an
-endpoint among thousands or millions of <a>DIDs</a> controlled by many different
-subjects.
+        해당 <a>DID 문서</a>의 데이터를 연관시킬 수 있으면 익명 <a>DIDs</a>의 안티-상관관계 보호는 쉽게 무너진다. 
+        예를 들어, 여러 <a>DID 문서</a>에서 동일한 <a>공개키 설명</a> 또는 
+        맞춤형 <a>서비스 엔드포인트</a>를 사용하면 동일한 <a>DID</a>를 사용하는 것과 같은 수준의 상관 정보를 제공 할 수 있다.
+        따라서 익명 <a>DID</a>에 대한 <a>DID 문서</a>도 쌍별로 고유한 공개 키를 사용해야 한다. 
+        익명 <a>DID</a>에 대해 <a>DID 문서</a>에서 쌍별로 고유한 <a>서비스 엔드포인트</a>를 사용하는 것도 자연스러운 것처럼 보일 수 있다. 
+        그러나 고유한 엔드 포인트를 통해 <a>DIDs</a> 간 모든 트래픽을 
+        타이밍 상관 관계와 유사한 분석이 용이한 고유한 버킷으로 완벽하게 분리할 수 있다.
+        따라서 엔드 포인트 프라이버시를 위한 더 나은 전략은 많은 다른 주체에 의해 제어되는 
+        수천 또는 수백만 개의 <a>DIDs</a> 간에 엔드 포인트를 공유하는 것이다.
       </p>
     </section>
 
@@ -2670,17 +2633,14 @@ Herd Privacy
       </h2>
 
       <p>
-When a <a>DID subject</a> is indistinguishable from others in the herd, privacy
-is available. When the act of engaging privately with another party
-is by itself a recognizable flag, privacy is greatly diminished. <a>DIDs</a>
-and <a>DID methods</a> need to work to improve herd privacy, particularly for
-those who legitimately need it most. Choose technologies and human
-interfaces that default to preserving anonymity and pseudonymity. In
-order to reduce <a href="https://en.wikipedia.org/wiki/Device_fingerprint">digital
-fingerprints</a>, share common settings across client
-implementations, keep negotiated options to a minimum on wire
-protocols, use encrypted transport layers, and pad messages to
-standard lengths.
+
+        <a>DID 주체</a>가 군중의 다른 사람들과 구별되지 않는 경우, 프라이버시 보호가 가능하다. 
+        다른 당사자와 개인적으로 참여하는 행위가 그 자체로 인식 가능한 플래그(flag)인 경우, 프라이버시가 크게 훼손된다.
+        <a>DIDs</a>와 <a>DID 메소드</a>는 군중 프라이버시의 보호, 
+        특히 합법적으로 가장 필요한 사람들의 프라이버시를 개선하기 위해 작동해야한다. 
+        익명성과 가명성을 유지하는 데 도움이 되는 기술과 휴먼 인터페이스를 선택해야 한다. 
+        <a href="https://en.wikipedia.org/wiki/Device_fingerprint">디지털 지문</a>을 줄이려면, 
+        클라이언트 구현에서 공통 설정을 공유하고, 협의된 옵션을 유선 프로토콜에서 최소로 유지하고, 암호화 된 전송 계층을 사용하고, 메시지를 표준 길이로 채워야 한다.
       </p>
     </section>
   </section>
